--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
   text-align: center;
-  margin: 10% auto;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -25,4 +24,8 @@ code {
 
 div {
   text-align: center;
+}
+
+div h1 {
+  margin-top:50px;
 }
